# geopackage-validator

./: .coveragerc  .dockerignore  .gitignore  CHANGES.md  Dockerfile  Dockerfile.local  Jenkinsfile  LICENSE  MANIFEST.in  Pipfile  README.md  docker-compose.yaml  local.dockerfile  local_entrypoint.sh  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build-and-publish-dockerhub.yml  build-and-publish-pypi.yml  build-and-publish.yml  pytest.yml
example/: example_config.json
geopackage_validator/: __init__.py  cli.py  constants.py  core.py  error.py  gdal_utils.py  generate.py  models.py  output.py  test_cli.py  test_validate.py  utils.py  validate.py
geopackage_validator/errors/: error_messages.py  validation_errors.py
geopackage_validator/gdal/: dataset.py  init.py  prerequisites.py
geopackage_validator/minio/: minio_context.py  test_minio_context.py
geopackage_validator/validations/: __init__.py  attribute_table_check.py  columnname_check.py  db_views_check.py  feature_id_check.py  geo_column_check.py  geom_column_check.py  geometry_ccw_check.py  geometry_check.py  geometry_dimension_check.py  geometry_empty_check.py  geometry_simple_check.py  geometry_type_check.py  geometry_valid_check.py  gpkg_geometry_valid.py  layerfeature_check.py  layername_check.py  lowercasecheck.py  name_length_check.py  rtree_check.py  rtree_present.py  rtree_present_check.py  rtree_valid_check.py  srs_check.py  table_definitions_check.py  test_columnname_check.py  test_db_views_check.py  test_featureid_check.py  test_geometry_check.py  test_geometry_type_check.py  test_geometry_valid_check.py  test_layerfeature_check.py  test_layername_check.py  test_lowercasecheck.py  test_rtree_present_check.py  test_rtree_valid_check.py  test_table_definitions_check.py  test_views_check.py  validate_all.py  validator.py
geopackage_validator/validations_overview/: validations_overview.py
hooks/: build
tests/: test_cli.py  test_core.py  test_utils.py  test_validate.py
tests/data/: GeopackageValidator.gpkg  GeopackageValidator.json  test_allcorrect.gpkg  test_allcorrect_definition.json  test_allcorrect_definition.yml  test_allcorrect_old_definition.json  test_allcorrect_with_indexes_and_fks.gpkg  test_allcorrect_with_indexes_and_fks_definition.yml  test_broken_geopackage.gpkg  test_changed_indexes_and_fks_definition.yml  test_columnname.gpkg  test_correct_attribute.gpkg  test_correct_attribute_with_many_to_many.gpkg  test_correct_attribute_with_many_to_many.json  test_db_views.gpkg  test_dimensions.gpkg  test_featureid.gpkg  test_featureid_different_column.gpkg  test_foreign_key_violation.gpkg  test_gdal_error.gpkg  test_geom_columnname.gpkg  test_geometry_empty.gpkg  test_geometry_null.gpkg  test_geometry_simple.gpkg  test_geometry_spatialite.gpkg  test_geometry_type.gpkg  test_geometry_valid.gpkg  test_incorrect_attribute_with_many_to_many.gpkg  test_layerfeature.gpkg  test_layerfeature_falsenegative.gpkg  test_layername.gpkg  test_namelength.gpkg  test_rtree_present_alltables.gpkg  test_rtree_present_single_table.gpkg  test_rtree_valid.gpkg
tests/data/validationsets/: example-validation-set-all.json  example-validation-set.json  example-validation-set.yaml
tests/minio/: test_minio_context.py
tests/validations/: test_attribute_table_check.py  test_ccw_check.py  test_columnname_check.py  test_db_views_check.py  test_dimensions_check.py  test_featureid_check.py  test_geom_columnname_check.py  test_geometry_empty_check.py  test_geometry_simple_check.py  test_geometry_type_check.py  test_geometry_valid_check.py  test_gpkg_geometry_valid.py  test_layerfeature_check.py  test_layername_check.py  test_name_length_check.py  test_rtree_present_check.py  test_rtree_valid_check.py  test_table_definitions_check.py  test_validate_all.py
tests/validationsets/: example-validation-set.json
