[build-system]
requires = ["setuptools>=59.8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdok-geopackage-validator"
description = "Validate Geopackage files according to PDOK requirements and recommendations"
keywords = ["geopackage-validator", "geopackage", "pdok"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
dynamic = ["version", "readme"]
dependencies = [
    "Click >= 8.0",
    "click-log >=0.3",
    "gdal >=3.2.1",
    "minio",
    "pyyaml",
]

[project.optional-dependencies]
test  = [
    "black == 22.3.0",
    "flake8",
    "ipdb",
    "ipython",
    "pytest >= 7.1",
    "pytest-cov",
    "pytest-black >= 0.3.12",
    "pytest-flakes",
    "pytest-mock",
]

[project.scripts]
geopackage-validator = "geopackage_validator.cli:cli"

[tool.setuptools.dynamic]
version = {attr = "geopackage_validator.constants.__version__"}
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
include = ["geopackage_validator*"]  # package names should match these glob patterns (["*"] by default)
exclude = ["tests*"]  # exclude packages matching these glob patterns (empty by default)

[tool.pytest.ini_options]
testpaths = [
    "geopackage_validator",
    "tests",
]