[tool:pytest]
addopts = --cache-clear --black
filterwarnings =
    ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning
    ignore:Using or importing the ABCs from 'collections' instead of from.*:DeprecationWarning

[options]
python_requires = >=3.6
install_requires =
    Click >= 8.0
    click-log >=0.3
    gdal >=3.2.1
    minio
    pyyaml

[options.extras_require]
test =
    black == 22.3.0
    flake8
    ipdb
    ipython
    pytest >= 7.0.1
    pytest-cov
    pytest-black >= 0.3.12
    pytest-flakes
    pytest-mock