[metadata]
name = pdok_geopackage_validator
version = geopackage_validator.constants.__version__
description = "Validate Geopackage files according to PDOK requirements and recommendations"
keywords = ["geopackage-validator", "geopackage", "pdok"]
license = {text = "MIT"}
classifiers =
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"

[options]
python_requires = >=3.6
install_requires =
    setuptools>=42.0,!=58.*,!=59.*,!=60.*,!=61.*
    Click >= 8.0
    click-log >=0.3
    gdal >=3.0.4
    minio
    pyyaml

[options.extras_require]
test =
    black == 22.3.0
    flake8
    ipdb
    ipython
    pytest >= 7.0.1
    pytest-cov
    pytest-flakes
    pytest-mock

[tool:pytest]
addopts = --cache-clear
filterwarnings =
    ignore:the imp module is deprecated in favour of importlib.*:DeprecationWarning
    ignore:Using or importing the ABCs from 'collections' instead of from.*:DeprecationWarning
